# PennCloud

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  initbuild.sh
src/http/: httpserv.cpp  main.cpp
src/http/htmldocs/: emailform.html  homepage.html  loginform.html  loginsplash.html  registerform.html  testdir.html  testdoc.html  uploadform.html
src/kv/: README.md  kvapplication.cpp  kvapplication.h  kvclientsession.cpp  kvclientsession.h  kvconfig.proto  kvlogmanager.cpp  kvlogmanager.h  kvprotocol.proto  kvserversession.cpp  kvserversession.h  kvservicemessages.proto  kvstore.cpp  kvstore.h  kvtcpcluster.cpp  kvtcpcluster.h  main.cpp
src/kvtool/: main.cpp
src/lib/: kvapi.cpp  kvapi.h  logutil.cpp  logutil.h  mailapi.cpp  mailapi.h  protoutil.cpp  protoutil.h  semaphore.cpp  semaphore.h  sockutil.cpp  sockutil.h  storageapi.cpp  storageapi.h  test.cpp  test.h  timereventscheduler.cpp  timereventscheduler.h
src/mailtool/: main.cpp
src/smtp/: main.cpp
src/storage/: main.cpp  storage.proto
src/storagetool/: main.cpp
src/webmail/: main.cpp  pop3messages.proto
